--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-
+    <h1>Library</h1>
+    <ul id="list">
+    </ul>
+    <button type="button" id="new">New Book</button>
+    <dialog id="dialog">
+        <p>Hello</p>
+    </dialog>
 </body>
 </html>
