--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     </ul>
     <button type="button" id="new">New Book</button>
     <dialog id="dialog">
-        <p>Hello</p>
+        <form action="">
+            <label for="title">Title:</label>
+            <input type="text" id="title" placeholder="Harry Potter and the 
+                                                       Sorcerer's Stone">
+            <label for="author">Author:</label>
+            <input type="text" id="author" placeholder="J.K. Rowling">
+            <label for="pages">Numbers of Pages:</label>
+            <input type="number" id="pages" placeholder="320">
+            <label for="read">Read? True or False</label>
+            <input type="text" id="read" placeholder="true">
+        </form>
     </dialog>
 </body>
 </html>
