Close dialog box with "submit" button

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <dialog id="dialog">
         <form action="">
             <label for="title">Title:</label>
-            <input type="text" id="title" placeholder="Harry Potter and the 
-                                                       Sorcerer's Stone">
+            <input type="text" id="title" name="title" 
+                placeholder="Harry Potter and the Sorcerer's Stone">
             <label for="author">Author:</label>
-            <input type="text" id="author" placeholder="J.K. Rowling">
+            <input type="text" id="author" name="author" 
+                placeholder="J.K. Rowling">
             <label for="pages">Numbers of Pages:</label>
-            <input type="number" id="pages" placeholder="320">
+            <input type="number" id="pages" name="pages" placeholder="320">
             <label for="read">Read? True or False</label>
-            <input type="text" id="read" placeholder="true">
+            <input type="text" id="read" name="read" placeholder="true">
+            <button type="button" id="submit">Submit</button>
         </form>
     </dialog>
 </body>
