--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                 placeholder="J.K. Rowling">
             <label for="pages">Numbers of Pages:</label>
             <input type="number" id="pages" name="pages" placeholder="320">
-            <label for="read">Read? True or False</label>
-            <input type="text" id="read" name="read" placeholder="true">
+            <label for="read">Read</label>
+            <input type="radio" id="read" name="read" value="Read">
+            <label for="unread">Unread</label>
+            <input type="radio" name="read" id="unread" value="Unread">
             <button type="button" id="submit">Submit</button>
         </form>
     </dialog>
