--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
                 placeholder="J.K. Rowling">
             <label for="pages">Numbers of Pages:</label>
             <input type="number" id="pages" name="pages" placeholder="320">
-            <label for="read">Read</label>
-            <input type="radio" id="read" name="read" value="Read">
-            <label for="unread">Unread</label>
-            <input type="radio" name="read" id="unread" value="Unread">
+            <div>
+                <label for="read">Read</label>
+                <input type="radio" id="read" name="read" value="Read">
+            </div>
+            <div>
+                <label for="unread">Unread</label>
+                <input type="radio" name="read" id="unread" value="Unread">
+            </div>
             <button type="button" id="submit">Submit</button>
         </form>
     </dialog>
