--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </ul>
     <button type="button" id="new">New Book</button>
     <dialog id="dialog">
-        <form action="">
+        <form action="" method="dialog">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" 
                 placeholder="Harry Potter and the Sorcerer's Stone">
@@ -30,7 +30,7 @@
                 <label for="unread">Unread</label>
                 <input type="radio" name="read" id="unread" value="Unread">
             </div>
-            <button type="button" id="submit">Submit</button>
+            <button type="submit" id="submit">Submit</button>
         </form>
     </dialog>
 </body>
