Add a 'cancel' button to close dialog box
This way the user is able to exit out of the dialog box without needing
to know that they can hit the esc button on their keyboard.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <input type="radio" name="read" id="unread" value="Unread">
             </div>
             <button type="submit" id="submit">Submit</button>
+            <button type="button" id="cancel">Cancel</button>
         </form>
     </dialog>
 </body>
