Add new book to page by outside function
This dramatically cleans up code compared to the original version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Library</h1>
     <ul id="list">
     </ul>
-    <button type="button" id="new">New Book</button>
+    <button type="button" id="add">Add Book</button>
     <dialog id="dialog">
         <form action="" method="dialog">
             <label for="title">Title:</label>
