--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-
+    <div class="container">
+        <form action="" method="post">
+            <div>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title">
+            </div>
+            <div>
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author">
+            </div>
+            <div>
+                <label for="description">Description:</label>
+                <input type="text" id="description" name="description">
+            </div>
+            <div>
+                <label for="pages">Pages:</label>
+                <input type="number" id="pages" name="pages">
+            </div>
+            <fieldset>
+                <legend>Read:</legend>
+                <div>
+                    <label for="yes">Yes</label>
+                    <input type="radio" id="yes" name="read" value="yes">
+                </div>
+                <div>
+                    <label for="no">No</label>
+                    <input type="radio" id="no" name="read" value="no" checked>
+                </div>
+                <div>
+                    <label for="incomplete">In Progress</label>
+                    <input type="radio" id="incomplete" name="read" value="incomplete">
+                </div>
+            </fieldset>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
