Add new book to page with submit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="form-container">
         <form action="" method="post">
             <div>
                 <label for="title">Title:</label>
@@ -43,6 +43,9 @@
             </fieldset>
             <button type="submit">Submit</button>
         </form>
+    </div>
+    <div class="book-display">
+
     </div>
 </body>
 </html>
