Display read status as well

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 <legend>Read:</legend>
                 <div>
                     <label for="yes">Yes</label>
-                    <input type="radio" id="yes" name="read" value="yes" class="read">
+                    <input type="radio" id="yes" name="read" value="Yes" class="read">
                 </div>
                 <div>
                     <label for="no">No</label>
-                    <input type="radio" id="no" name="read" value="no" checked class="read">
+                    <input type="radio" id="no" name="read" value="No" checked class="read">
                 </div>
                 <div>
-                    <label for="incomplete">In Progress</label>
-                    <input type="radio" id="incomplete" name="read" value="incomplete" class="read">
+                    <label for="incomplete">Incomplete</label>
+                    <input type="radio" id="incomplete" name="read" value="Incomplete" class="read">
                 </div>
             </fieldset>
             <button type="submit">Submit</button>
