Reset the form with each submitted book
This enables a smoother UI

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div>
                         <label for="no">No</label>
-                        <input type="radio" id="no" name="read" value="No" checked class="read">
+                        <input type="radio" id="no" name="read" value="No" class="read">
                     </div>
                     <div>
                         <label for="incomplete">Incomplete</label>
