--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <form action="" method="post">
                 <div>
                     <label for="title">Title:</label>
-                    <input type="text" id="title" name="title">
+                    <input type="text" id="title" name="title" required>
                 </div>
                 <div>
                     <label for="author">Author:</label>
@@ -32,15 +32,15 @@
                     <legend>Read:</legend>
                     <div>
                         <label for="yes">Yes</label>
-                        <input type="radio" id="yes" name="read" value="Yes" class="read">
+                        <input type="radio" id="yes" name="read" value="Yes" class="read" required>
                     </div>
                     <div>
                         <label for="no">No</label>
-                        <input type="radio" id="no" name="read" value="No" class="read">
+                        <input type="radio" id="no" name="read" value="No" class="read" required>
                     </div>
                     <div>
                         <label for="incomplete">Incomplete</label>
-                        <input type="radio" id="incomplete" name="read" value="Incomplete" class="read">
+                        <input type="radio" id="incomplete" name="read" value="Incomplete" class="read" required>
                     </div>
                 </fieldset>
                 <button type="submit">Submit</button>
