Change read status using prototype

--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
                     <legend>Read:</legend>
                     <div>
                         <label for="yes">Yes</label>
-                        <input type="radio" id="yes" name="read" value="Yes" class="read" required>
+                        <input type="radio" id="yes" name="read" value="yes" class="read" required>
                     </div>
                     <div>
                         <label for="no">No</label>
-                        <input type="radio" id="no" name="read" value="No" class="read" required>
-                    </div>
-                    <div>
-                        <label for="incomplete">Incomplete</label>
-                        <input type="radio" id="incomplete" name="read" value="Incomplete" class="read" required>
+                        <input type="radio" id="no" name="read" value="no" class="read" required>
                     </div>
                 </fieldset>
                 <button type="submit">Submit</button>
