Clean up code and organize it
JS is done for now. With adding style there may be more to do.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <h1>Library</h1>
     <button type="button" id="add-book-button">+</button>
     <dialog>
         <div class="form-container">
