--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <label for="pages">Pages:</label>
                         <input type="number" id="pages" name="pages">
                     </div>
-                    <div>
+                    <div class="read">
                         <label for="read">Have you read this book?</label>
                         <input type="checkbox" name="read" id="read">
                     </div>
