--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <form action="" method="post">
                     <div>
                         <label for="title">Title:</label>
-                        <input type="text" id="title" name="title" required>
+                        <input type="text" id="title" name="title" required minlength = '2'>
                     </div>
                     <div>
                         <label for="author">Author:</label>
-                        <input type="text" id="author" name="author">
+                        <input type="text" id="author" name="author" required minlength = "2">
                     </div>
                     <div>
                         <label for="pages">Pages:</label>
-                        <input type="number" id="pages" name="pages">
+                        <input type="number" id="pages" name="pages" required min = "1">
                     </div>
                     <div class="read">
                         <label for="read">Have you read this book?</label>
