--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="javascript.js" defer></script>
-</head>
-<body>
-    <h1>Library</h1>
-    <div class="display">
-        <button type="button" id="add-book-button">+</button>
-        <p class="add-book">Add Book</p>
-        <dialog>
-                <form action="" method="post">
-                    <div>
-                        <label for="title">Title:</label>
-                        <input type="text" id="title" name="title" required minlength = '2'>
-                    </div>
-                    <div>
-                        <label for="author">Author:</label>
-                        <input type="text" id="author" name="author" required minlength = "2">
-                    </div>
-                    <div>
-                        <label for="pages">Pages:</label>
-                        <input type="number" id="pages" name="pages" required min = "1">
-                    </div>
-                    <div class="read">
-                        <label for="read">Have you read this book?</label>
-                        <input type="checkbox" name="read" id="read">
-                    </div>
-                    <button type="submit">Submit</button>
-                    <button type="button" id="cancel">Cancel</button>
-                </form>
-        </dialog>
-        <div class="book-display"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Library</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="javascript.js" type="module" defer></script>
+  </head>
+  <body>
+    <h1>My Library</h1>
+    <div class="main">
+      <button type="button" id="add-book">+</button>
+      <p>Add Book</p>
+      <dialog>
+        <form action="" method="post">
+          <div class="form-group">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required />
+          </div>
+          <div class="form-group">
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" required />
+          </div>
+          <div class="form-group">
+            <label for="pages">Pages:</label>
+            <input type="number" id="pages" name="pages" required min="0" />
+          </div>
+          <div class="form-group read-group">
+            <label for="read">Have you read this book?</label>
+            <input type="checkbox" name="read" id="read" />
+          </div>
+          <button type="submit">Submit</button>
+          <button type="button" id="cancel">Cancel</button>
+        </form>
+      </dialog>
+      <div class="book-display"></div>
     </div>
-</body>
+  </body>
 </html>
